--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,14 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+
+  <!-- Cards -->
+
+  <link href="css/bootstrap.css" rel="stylesheet" />
+  <link href="css/rotating-card.css" rel="stylesheet" />
+  <link href="https://netdna.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" />
+
+  
     <title>React App</title>
   </head>
   <body>
@@ -102,10 +110,9 @@
 
 <div class="container">
 <div class="row">
- <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
-   <h1>Better Solutions For Your Business</h1>
-   <h2>We are team of talented designers making websites with Bootstrap</h2>
-   <div class="d-flex justify-content-center justify-content-lg-start">
+ <div class="col-lg-10 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
+   <h1>Take Your Buisness To The Clouds</h1>
+   <!-- <div class="d-flex justify-content-center justify-content-lg-start">
      <a href="#about" class="btn-get-started scrollto">Get Started</a>
      <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
    </div>
@@ -114,8 +121,18 @@
    <img src="assets/img/hero-img.png" class="img-fluid animated" alt="" />
  </div>
 </div>
-</div>
+</div> -->
 
+</section>
+
+<section class="video-section">
+  <div class="wrapper">
+
+  <video  controls>
+    <source src="./assets/videos/sample.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+</div>
 </section>
 
 
@@ -125,34 +142,149 @@
  <div class="row" data-aos="zoom-in">
 
    <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-     <img src="assets/img/clients/client-1.png" class="img-fluid" alt="" />
+     <img src="assets/img/clients/client1.png" class="img-fluid" alt="" />
    </div>
 
    <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-     <img src="assets/img/clients/client-2.png" class="img-fluid" alt="" />
+     <img src="assets/img/clients/client2.png" class="img-fluid" alt="" />
    </div>
 
    <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-     <img src="assets/img/clients/client-3.png" class="img-fluid" alt=""/>
+     <img src="assets/img/clients/client3.png" class="img-fluid" alt=""/>
    </div>
 
    <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-     <img src="assets/img/clients/client-4.png" class="img-fluid" alt=""/>
+     <img src="assets/img/clients/client4.png" class="img-fluid" alt=""/>
    </div>
 
    <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-     <img src="assets/img/clients/client-5.png" class="img-fluid" alt=""/>
+     <img src="assets/img/clients/client5.png" class="img-fluid" alt=""/>
    </div>
 
    <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-     <img src="assets/img/clients/client-6.png" class="img-fluid" alt=""/>
+     <img src="assets/img/clients/client6.png" class="img-fluid" alt=""/>
    </div>
 
  </div>
 
 </div>
 </section>
-<section id="about" class="about">
+
+<section id="portfolio" class="portfolio">
+  <div class="container" data-aos="fade-up">
+  
+   <div class="section-title">
+     <h2>Portfolio</h2>
+     <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+   </div>
+  
+   <ul id="portfolio-flters" class="d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
+     <li data-filter="*" class="filter-active">All</li>
+     <li data-filter=".filter-app">App</li>
+     <li data-filter=".filter-card">Card</li>
+     <li data-filter=".filter-web">Web</li>
+   </ul>
+  
+   <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
+  
+     <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+       <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt=""/></div>
+       <div class="portfolio-info">
+         <h4>App 1</h4>
+         <p>App</p>
+         <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
+         <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+       </div>
+     </div>
+  
+     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+       <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt=""/> </div>
+       <div class="portfolio-info">
+         <h4>Web 3</h4>
+         <p>Web</p>
+         <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
+         <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+       </div>
+     </div>
+  
+     <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+       <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt=""/></div>
+       <div class="portfolio-info">
+         <h4>App 2</h4>
+         <p>App</p>
+         <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 2"><i class="bx bx-plus"></i></a>
+         <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+       </div>
+     </div>
+  
+     <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+       <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt=""/></div>
+       <div class="portfolio-info">
+         <h4>Card 2</h4>
+         <p>Card</p>
+         <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 2"><i class="bx bx-plus"></i></a>
+         <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+       </div>
+     </div>
+  
+     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+       <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt=""/></div>
+       <div class="portfolio-info">
+         <h4>Web 2</h4>
+         <p>Web</p>
+         <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 2"><i class="bx bx-plus"></i></a>
+         <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+       </div>
+     </div>
+  
+     <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+       <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt=""/></div>
+       <div class="portfolio-info">
+         <h4>App 3</h4>
+         <p>App</p>
+         <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 3"><i class="bx bx-plus"></i></a>
+         <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+       </div>
+     </div>
+  
+     <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+       <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt=""/></div>
+       <div class="portfolio-info">
+         <h4>Card 1</h4>
+         <p>Card</p>
+         <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 1"><i class="bx bx-plus"></i></a>
+         <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+       </div>
+     </div>
+  
+     <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+       <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt=""/></div>
+       <div class="portfolio-info">
+         <h4>Card 3</h4>
+         <p>Card</p>
+         <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 3"><i class="bx bx-plus"></i></a>
+         <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+       </div>
+     </div>
+  
+     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+       <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt=""/></div>
+       <div class="portfolio-info">
+         <h4>Web 3</h4>
+         <p>Web</p>
+         <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
+         <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+       </div>
+     </div>
+  
+   </div>
+  
+  </div>
+  </section>
+
+
+
+<!-- <section id="about" class="about">
 <div class="container" data-aos="fade-up">
 
  <div class="section-title">
@@ -182,8 +314,8 @@
  </div>
 
 </div>
-</section>
-<section id="why-us" class="why-us section-bg">
+</section> -->
+<!-- <section id="why-us" class="why-us section-bg">
 <div class="container-fluid" data-aos="fade-up">
 
  <div class="row">
@@ -287,7 +419,7 @@
  </div>
 
 </div>
-</section>
+</section> -->
 
 <section id="services" class="services section-bg">
 <div class="container" data-aos="fade-up">
@@ -334,7 +466,7 @@
 
 </div>
 </section>
-<section id="cta" class="cta">
+<!-- <section id="cta" class="cta">
 <div class="container" data-aos="zoom-in">
 
  <div class="row">
@@ -348,118 +480,8 @@
  </div>
 
 </div>
-</section>
-<section id="portfolio" class="portfolio">
-<div class="container" data-aos="fade-up">
+</section> -->
 
- <div class="section-title">
-   <h2>Portfolio</h2>
-   <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
- </div>
-
- <ul id="portfolio-flters" class="d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
-   <li data-filter="*" class="filter-active">All</li>
-   <li data-filter=".filter-app">App</li>
-   <li data-filter=".filter-card">Card</li>
-   <li data-filter=".filter-web">Web</li>
- </ul>
-
- <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
-
-   <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-     <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt=""/></div>
-     <div class="portfolio-info">
-       <h4>App 1</h4>
-       <p>App</p>
-       <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
-       <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-     </div>
-   </div>
-
-   <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-     <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt=""/> </div>
-     <div class="portfolio-info">
-       <h4>Web 3</h4>
-       <p>Web</p>
-       <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
-       <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-     </div>
-   </div>
-
-   <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-     <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt=""/></div>
-     <div class="portfolio-info">
-       <h4>App 2</h4>
-       <p>App</p>
-       <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 2"><i class="bx bx-plus"></i></a>
-       <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-     </div>
-   </div>
-
-   <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-     <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt=""/></div>
-     <div class="portfolio-info">
-       <h4>Card 2</h4>
-       <p>Card</p>
-       <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 2"><i class="bx bx-plus"></i></a>
-       <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-     </div>
-   </div>
-
-   <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-     <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt=""/></div>
-     <div class="portfolio-info">
-       <h4>Web 2</h4>
-       <p>Web</p>
-       <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 2"><i class="bx bx-plus"></i></a>
-       <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-     </div>
-   </div>
-
-   <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-     <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt=""/></div>
-     <div class="portfolio-info">
-       <h4>App 3</h4>
-       <p>App</p>
-       <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 3"><i class="bx bx-plus"></i></a>
-       <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-     </div>
-   </div>
-
-   <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-     <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt=""/></div>
-     <div class="portfolio-info">
-       <h4>Card 1</h4>
-       <p>Card</p>
-       <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 1"><i class="bx bx-plus"></i></a>
-       <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-     </div>
-   </div>
-
-   <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-     <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt=""/></div>
-     <div class="portfolio-info">
-       <h4>Card 3</h4>
-       <p>Card</p>
-       <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 3"><i class="bx bx-plus"></i></a>
-       <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-     </div>
-   </div>
-
-   <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-     <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt=""/></div>
-     <div class="portfolio-info">
-       <h4>Web 3</h4>
-       <p>Web</p>
-       <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
-       <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-     </div>
-   </div>
-
- </div>
-
-</div>
-</section>
 
 <section id="team" class="team section-bg">
 <div class="container" data-aos="fade-up">
@@ -544,7 +566,15 @@
 </div>
 </section>
 
-<section id="pricing" class="pricing">
+<section id="blog" class="blog">
+<div class="container" data-aos="fade-up">
+  <div class="section-title">
+  <h2>Blog</h2>
+</div>
+</div>
+</section>
+
+<!-- <section id="pricing" class="pricing">
 <div class="container" data-aos="fade-up">
 
  <div class="section-title">
@@ -663,7 +693,7 @@
  </div>
 
 </div>
-</section>
+</section> -->
 
 
 <section id="contact" class="contact">
@@ -676,27 +706,28 @@
 
  <div class="row">
 
-   <div class="col-lg-5 d-flex align-items-stretch">
-     <div class="info">
-       <div class="address">
+    <div class="col-lg-5 d-flex align-items-stretch">
+     <div class="info"> 
+        <!-- <div class="address">
          <i class="bi bi-geo-alt"></i>
          <h4>Location:</h4>
          <p>A108 Adam Street, New York, NY 535022</p>
-       </div>
+       </div> -->
 
-       <div class="email">
+      <!-- <div class="email">
          <i class="bi bi-envelope"></i>
          <h4>Email:</h4>
          <p>info@example.com</p>
-       </div>
+       </div>  -->
 
-       <div class="phone">
+       <!-- <div class="phone">
          <i class="bi bi-phone"></i>
          <h4>Call:</h4>
          <p>+1 5589 55488 55s</p>
-       </div>
+       </div> -->
 
-       <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: '100%'; height: '290px'" allowfullscreen></iframe>
+       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30243.549022174597!2d73.76274740949772!3d18.644078353137537!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2b9c02954e8cb%3A0x525d708de1d526f2!2sAkurdi%2C%20Pimpri-Chinchwad%2C%20Maharashtra!5e0!3m2!1sen!2sin!4v1628220614317!5m2!1sen!2sin"
+        width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
      </div>
 
    </div>
@@ -740,7 +771,7 @@
 
 <div class="footer-newsletter">
 <div class="container">
- <div class="row justify-content-center">
+ <!-- <div class="row justify-content-center">
    <div class="col-lg-6">
      <h4>Join Our Newsletter</h4>
      <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
@@ -748,7 +779,7 @@
        <input type="email" name="email"/><input type="submit" value="Subscribe"/>
 </form>
    </div>
- </div>
+ </div> -->
 </div>
 </div>
 
