--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
   <link href="https://netdna.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" />
 
   
-    <title>React App</title>
+    <title>CLoudZenia</title>
   </head>
   <body>
     
